[metadata]
name = flaskr
version = 1.0.0
description = A basic blog app built with Flask.
long_description = file: README.rst

[options]
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
    Flask>=2.2
    Flask-SQLAlchemy>=3
    SQLAlchemy

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = flaskr
