[metadata]
name = dailypush
version = 1.0.0
description = A basic microblogging app built with Flask.
long_description = file: README.rst

[options]
packages = find:
include_package_data = true
python_requires = >=3.10
install_requires =
    Flask>=2.2
    Flask-SQLAlchemy>=3
    SQLAlchemy
    Flask-Admin>=1.6

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = dailypush
